[FIX][User-register responsivity]corrected the gray line width and the buttons on mobile. modified:   app/css/custom.css modified:   app/ts/user-register.ts modified:   app/user-register.html

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -208,6 +208,10 @@ body {
     justify-content: center;
 }
 
+.custom-mr {
+    margin: 3%;
+}
+
 /* Elements */
 
 .card-size {
